[gd_scene load_steps=3 format=3 uid="uid://xnep7wmkr4mk"]

[ext_resource type="Script" uid="uid://bt7xxju5yu44" path="res://scripts/ui/inventory_slot.gd" id="1_qt7p1"]
[ext_resource type="Texture2D" uid="uid://88u5igyg4jn8" path="res://tres/items/textures/placeholder_purple.tres" id="1_rgyke"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(48, 48)
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qt7p1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemSprite" type="Sprite2D" parent="MarginContainer"]
texture = ExtResource("1_rgyke")
offset = Vector2(24, 24)

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="ItemQuantityLabel" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
offset_right = 27.0
offset_bottom = 16.0
text = "000"

[node name="ItemSlotButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ItemSlotButton" to="." method="_on_item_slot_button_pressed"]
